--- a/web/views/header.html
+++ b/web/views/header.html
@@ -1,5 +1,13 @@
-<title>PHP Getting Started on Heroku</title>
-<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Julius+Sans+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Galada|Leckerli+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+
+<link rel="stylesheet" href="css/estyles.css">
+<link rel="stylesheet" href="css/rows.css">
+<link rel="stylesheet" href="css/vista.css">
+<title>Document</title>
