--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -16,7 +16,7 @@
                         <p class="f38 set4">ACADEMICOS</p><br>
                         <P class="f28 set4">Gestion Escolar</P><br><br><br><br>
 
-                       <a class="f40 set5" href="">Ver más</a><br>
+                       <a class="f40 set5" href="init.html">Ver más</a><br>
                         
                         <p class="f28 p40 set4">Herramienta que lleva un control de Grupos Escolares</p>
                         </div>
