--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -6,9 +6,9 @@
 
 <body>
   {% include 'nav.html' %}
-
+  <a href="init.html">probar</a>
   {% block content %}{% endblock %}
 
-  {% include 'init.html' %}
+ 
 </body>
 </html>
