--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -5,11 +5,11 @@
 </head>
 
 <body>
+    {% block content2 %}{% endblock2 %}
   {% include 'nav.html' %}
  
 
   {% block content %}{% endblock %}
 
-  <a href="init.html">probar</a>
 </body>
 </html>
