--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -10,7 +10,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="https://akulabphp.herokuapp.com/init.html">INIT HTML</a></li>
+            <li><a href="/init.html">INIT HTML</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">Getting Started on Heroku with Heroku Connect</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
           </ul>
