--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -11,9 +11,8 @@
         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="views/init.php">INIT HTML</a></li>
-            <li><a href="views/destruct.html">Getting Started on Heroku with Heroku Connect</a></li>
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
-          </ul>
+            <li><a href="views/destruct.php">Getting Started on Heroku with Heroku Connect</a></li>
+             </ul>
       </li>
     </ul>
     
