--- a/web/views/nav.html
+++ b/web/views/nav.html
@@ -10,8 +10,8 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="views/init">INIT HTML</a></li>
-            <li><a href="views/destruct">Getting Started on Heroku with Heroku Connect</a></li>
+            <li><a href="views/init.html">INIT HTML</a></li>
+            <li><a href="views/destruct.html">Getting Started on Heroku with Heroku Connect</a></li>
           </ul>
       </li>
     </ul>
