--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -12,6 +12,16 @@ body {
 	/* background-repeat:no-repeat;  Indicamos que no se repetira */
 	/* background-size:cover;  Encajamos la imagen al 100% del ancho */
 	/* background-attachment: fixed; Establecemos una posicion fija para la imagen */
+	line-height: 1.5;
+    font-size: 1.4em;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 
