--- a/web/views/header.html
+++ b/web/views/header.html
@@ -10,4 +10,5 @@
 <link rel="stylesheet" href="css/estyles.css">
 <link rel="stylesheet" href="css/rows.css">
 <link rel="stylesheet" href="css/vista.css">
+<link rel="stylesheet" href="css/normalize.css">
 <title>Document</title>
