--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
- <div class=" sect2">
+ <div class="container sect2">
                 <div id="contraste1">
                    <p class="set6" >te va a cargar</p>
                 </div>
