--- a/web/views/header.html
+++ b/web/views/header.html
@@ -11,4 +11,6 @@
 <link rel="stylesheet" href="css/rows.css">
 <link rel="stylesheet" href="css/vista.css">
 <link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/media.css">
 <title>Document</title>
