--- a/css/style.css
+++ b/css/style.css
@@ -14,33 +14,33 @@
     width: 100%;
     background-color: #9c29a1;
 }
-#header .nav{
+#header nav{
  width: 100%;
  max-width: 100px;
  margin: 20px auto;
  background-color: #9c29a1;
 }
 
-#header .nav{
+#header nav{
     overflow: hidden;
     list-style: none;
 
     transition: all 0.80s;
 }
-#header .nav li{
+#header nav ul li{
     float: left;
 
 }
-#header .nav li a{
+#header nav ul li a{
     color: #fff;
     padding: 20px;
     display: block;
     text-decoration: none;
 }
-#header .nav li span{
+#header nav ul li span{
     margin-right: 10px;
 }
-#header .nav li a:hover{
+#header nav ul li a:hover{
     background: rgba(4, 3, 10, 0.658)
 }
 /*________________________________________________________*/
