--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,15 @@ header{
     background-color: #9c29a1;
 }
 header nav{
- width: 100%;
- max-width: 100px;
+ width: 90%;
+ max-width: 1000px;
  margin: 20px auto;
  background-color: #9c29a1;
 }
 
-header nav{
+header nav ul{
     overflow: hidden;
     list-style: none;
-
-    transition: all 0.80s;
 }
 header nav ul li{
     float: left;
