--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 
 /*________________________________________________________*/
 header{
+    margin:auto;
+    position: fixed;
     width: 100%;
     background-color: #9c29a1;
 }
@@ -20,24 +22,68 @@ header nav{
  margin: 20px auto;
  background-color: #9c29a1;
 }
+ul, ol{
+    list-style: none;
+}
 
-header nav ul{
+header nav .nav{
     overflow: hidden;
     list-style: none;
 }
-header nav ul li{
+header nav .nav li{
     float: left;
 
 }
-header nav ul li a{
+header nav .nav li a{
     color: #fff;
     padding: 20px;
     display: block;
     text-decoration: none;
 }
-header nav ul li a:hover{
+header nav .nav li a:hover{
     background: rgba(4, 3, 10, 0.658)
 }
+
+header .nav li ul {
+    transition: all 0.80s;
+    display: none;
+    position: absolute;
+    min-width: 140px;
+
+}
+
+.nav > li{
+    float: left;
+    
+   }
+   
+   .nav li ul {
+       transition: all 0.80s;
+       display: none;
+       position: absolute;
+       min-width: 140px;
+     
+   
+   }
+   
+   .nav li:hover > ul{
+       display: block;
+       transition: all 0.80s;
+   
+   }
+   .nav li ul li{
+       position: relative;
+       transition: all 0.80s;
+   }
+   
+   .nav li ul li ul {
+       transition: all 0.80s;
+       position: relative;
+       right: -80px;
+       top: 0px;
+       transition: all 0.5s;
+   }
+
 /*________________________________________________________*/
 
 
