--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,12 @@ header .nav li ul {
 
 }
 
-.nav > li{
+header .nav > li{
     float: left;
     
    }
    
-   .nav li ul {
+   header .nav li ul {
        transition: all 0.80s;
        display: none;
        position: absolute;
@@ -66,17 +66,17 @@ header .nav li ul {
    
    }
    
-   .nav li:hover > ul{
+   header .nav li:hover > ul{
        display: block;
        transition: all 0.80s;
    
    }
-   .nav li ul li{
+   header .nav li ul li{
        position: relative;
        transition: all 0.80s;
    }
    
-   .nav li ul li ul {
+   header  .nav li ul li ul {
        transition: all 0.80s;
        position: relative;
        right: -80px;
