--- a/css/sty.css
+++ b/css/sty.css
@@ -31,10 +31,22 @@ header nav ul li {
     float: left;
 }
 
+header nav ul li a{
+    color: #fff;
+    padding: 20px;
+    display: block;
+    text-decoration: none;
+}
+header nav ul li span{
+    margin-right: 10px;
+}
+header nav ul li a:hover{
+    background: rgba(4, 3, 10, 0.658)
+}
 
-
-
-
+section{
+    padding: 20px;
+}
 
 
 
