--- a/css/sty.css
+++ b/css/sty.css
@@ -32,6 +32,12 @@ header nav ul li {
     float: left;
 }
 
+header nav ul li ul{
+    transition: all 0.80s;
+    display: none;
+    position: absolute;
+    min-width: 140px;
+}
 
 header nav ul li a{
     color: #fff;
