--- a/css/sty.css
+++ b/css/sty.css
@@ -18,6 +18,7 @@ header nav {
     max-width: 1000px;
    margin: 20px auto;
    background: #9c29a1;
+   position: fixed;
 }
 
 .menu-bar{
@@ -61,6 +62,21 @@ section{
 
 
 
+/*CLASE DE LOS ICONOS*/
+
+[class*="icon-"]:before{
+    position: relative;
+    color: rgba(25, 16, 73, 0.658);
+    font-size: 25px;
+    padding: 0px;
+
+}[class="icon-home-1"]:before{
+    position: relative;
+    color: rgba(255, 255, 255, 0.815);
+    font-size: 25px;
+    padding: 0px;
+
+}
 
 
 
