--- a/css/sty.css
+++ b/css/sty.css
@@ -47,6 +47,15 @@ section{
     padding: 20px;
 }
 
+@media screen and (ax-width:800px){
+    header nav {
+        width: 80%;
+        height: 100%;
+        margin: 0;
+        position: fixed;
+    }
+}
+
 
 
 
