--- a/css/sty.css
+++ b/css/sty.css
@@ -47,7 +47,7 @@ section{
     padding: 20px;
 }
 
-@media screen and (max-width:800px){
+@media(max-width:800px){
     header nav {
         width: 80%;
         height: 100%;
