--- a/css/sty.css
+++ b/css/sty.css
@@ -10,10 +10,10 @@
 }
 
 
-header{
+#header{
     width: 100%;
 }
-header nav {
+#header .nav {
     width: 95%;
     max-width: 1000px;
    margin: 20px auto;
@@ -24,22 +24,22 @@ header nav {
 .menu-bar{
     display: none;
 }
-header nav ul {
+#header .nav ul {
     overflow: hidden;
     list-style: none;
     left: 30%;
 }
 
-header nav ul li a{
+#header .nav ul li a{
     color: #fff;
     padding: 20px;
     display: block;
     text-decoration: none;
 }
-header nav ul li span{
+#header .nav ul li span{
     margin-right: 10px;
 }
-header nav ul li a:hover{
+#header .nav ul li a:hover{
     background: rgba(4, 3, 10, 0.377);
 }
 
@@ -48,7 +48,7 @@ section{
 }
 
 @media(min-width:800px){
-    header nav {
+    #header .nav {
         width: 80%;
         height: 100%;
         margin: 0;
