--- a/css/sty.css
+++ b/css/sty.css
@@ -29,33 +29,6 @@ header nav ul {
     list-style: none;
     left: 30%;
 }
-.nav li a:hover{
-    background-color: #34091C;
-    transition: all 0.80s;
-
-}
-.nav > li{
- float: left;
- 
-}
-
-.nav li ul {
-    transition: all 0.80s;
-    display: none;
-    min-width: 140px;
-  
-
-}
-
-.nav li:hover > ul{
-    display: block;
-    transition: all 0.80s;
-
-}
-.nav li ul li{
-    position: absolute;
-    transition: all 0.80s;
-}
 
 header nav ul li a{
     color: #fff;
@@ -72,6 +45,44 @@ header nav ul li a:hover{
 
 section{
     padding: 20px;
+}
+
+
+.nav li a:hover{
+    background-color: #34091C;
+    transition: all 0.80s;
+
+}
+.nav > li{
+ float: left;
+ 
+}
+
+.nav li ul {
+    transition: all 0.80s;
+    display: none;
+    position: absolute;
+    min-width: 140px;
+  
+
+}
+
+.nav li:hover > ul{
+    display: block;
+    transition: all 0.80s;
+
+}
+.nav li ul li{
+    position: relative;
+    transition: all 0.80s;
+}
+
+.nav li ul li ul {
+    transition: all 0.80s;
+    position: relative;
+    right: -80px;
+    top: 0px;
+    transition: all 0.5s;
 }
 
 @media screen and (max-width:800px){
