--- a/css/sty.css
+++ b/css/sty.css
@@ -12,6 +12,7 @@
 
 header{
     width: 100%;
+    position: fixed;
 }
 header nav {
     width: 95%;
@@ -47,43 +48,6 @@ section{
     padding: 20px;
 }
 
-
-.nav li a:hover{
-    background-color: #34091C;
-    transition: all 0.80s;
-
-}
-.nav > li{
- float: left;
- 
-}
-
-.nav li ul {
-    transition: all 0.80s;
-    display: none;
-    position: absolute;
-    min-width: 140px;
-  
-
-}
-
-.nav li:hover > ul{
-    display: block;
-    transition: all 0.80s;
-
-}
-.nav li ul li{
-    position: relative;
-    transition: all 0.80s;
-}
-
-.nav li ul li ul {
-    transition: all 0.80s;
-    position: relative;
-    right: -80px;
-    top: 0px;
-    transition: all 0.5s;
-}
 
 @media screen and (max-width:800px){
     header nav {
